--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Recipe APP (OPSC6312)</string>
+    <string name="app_name">Harmony Kitchen</string>
 </resources>
